--- a/src/styles/tasklist.scss
+++ b/src/styles/tasklist.scss
@@ -160,3 +160,17 @@ section.task-list {
     }
   }
 }
+@media (max-width: 700px) {
+  section.task-list {
+    padding: 70px 40px;
+    header {
+      flex-direction: column;
+      h2 {
+        margin-bottom: 30px;
+      }
+    }
+
+    main {
+    }
+  }
+}
